...
            android:padding="12dp"
            android:text="Create Account"
            android:background="@drawable/button_border"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/linkLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="Already a member? Login"
            android:gravity="center"
            android:textSize="16dip"
            />

    </LinearLayout>

...
