<resources>
    <string name="app_name">PUBCash</string>
    <string name="name">PUBCash</string>

    <string name="match_details">Match Details </string>
    <string name="available_matches">Available Matches </string>
    <string name="my_wallet" >My Wallet </string>
    <string name="dashboard">Dashboard </string>
    <string name="edit_profile">Edit Profile </string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="tnc" >Terms &amp; Conditions</string>
</resources>
